// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`FhirMedication should pass nodes and links through for UPDSF 1`] = `
Array [
  Object {
    "coding": Array [
      Object {
        "code": "21433011000036107",
        "display": "paracetamol",
        "system": "http://snomed.info/sct",
      },
    ],
    "status": "active",
    "type": "UPD",
  },
  Object {
    "coding": Array [
      Object {
        "code": "2442011000036104",
        "display": "paracetamol",
        "system": "http://snomed.info/sct",
      },
    ],
    "type": "substance",
  },
  Object {
    "coding": Array [
      Object {
        "code": "23628011000036109",
        "display": "paracetamol 500 mg tablet",
        "system": "http://snomed.info/sct",
      },
    ],
    "focused": true,
    "lastModified": "2014-06-30",
    "sourceCodeSystemUri": "http://snomed.info/sct",
    "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
    "status": "active",
    "subsidy": Array [],
    "type": "UPDSF",
  },
  Object {
    "coding": Array [
      Object {
        "code": "af136f0607369d4c0fba98771e8b05d13237fe381319b59e6a375520615a09a8",
        "system": "group",
      },
    ],
    "concepts": Array [
      Object {
        "coding": Array [
          Object {
            "code": "52258011000036105",
            "display": "paracetamol 500 mg + codeine phosphate hemihydrate 10 mg tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2014-06-30",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "subsidy": Array [],
        "type": "UPDSF",
      },
      Object {
        "coding": Array [
          Object {
            "code": "52806011000036108",
            "display": "paracetamol 500 mg + codeine phosphate hemihydrate 10 mg + doxylamine succinate 5.1 mg tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2016-02-29",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "subsidy": Array [],
        "type": "UPDSF",
      },
      Object {
        "coding": Array [
          Object {
            "code": "52803011000036102",
            "display": "paracetamol 500 mg + codeine phosphate hemihydrate 15 mg tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2014-06-30",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "subsidy": Array [],
        "type": "UPDSF",
      },
    ],
    "query": "type:MPUU ancestor:\\"23628011000036109|paracetamol 500 mg tablet\\"",
    "total": 28,
    "type": "group",
  },
  Object {
    "coding": Array [
      Object {
        "code": "bd1d58572d7bfde3ec89b383060ae08f73a116d33ab055ebb4eeef82b6e5c2c9",
        "system": "group",
      },
    ],
    "concepts": Array [
      Object {
        "coding": Array [
          Object {
            "code": "54282011000036105",
            "display": "Paracetamol (Herron) 500 mg uncoated tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2016-08-31",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "subsidy": Array [],
        "type": "BPSF",
      },
      Object {
        "coding": Array [
          Object {
            "code": "88341000036103",
            "display": "Calmative Pain Relief (Pharmacy Action) uncoated tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2016-08-31",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "subsidy": Array [],
        "type": "BPSF",
      },
      Object {
        "coding": Array [
          Object {
            "code": "1062931000168103",
            "display": "Pain Relief Paracetamol plus Codeine with Calmative (Cipla) uncoated tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2018-01-31",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "subsidy": Array [],
        "type": "BPSF",
      },
    ],
    "query": "type:TPUU ancestor:\\"23628011000036109|paracetamol 500 mg tablet\\"",
    "total": 406,
    "type": "group",
  },
  Object {
    "coding": Array [
      Object {
        "code": "24a723931526a57542783b62c236f912708822e33391a8f48c7de44db669e015",
        "system": "group",
      },
    ],
    "concepts": Array [
      Object {
        "coding": Array [
          Object {
            "code": "63941011000036106",
            "display": "paracetamol 500 mg tablet, 48",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2014-06-30",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "subsidy": Array [],
        "type": "UPG",
      },
      Object {
        "coding": Array [
          Object {
            "code": "46260011000036106",
            "display": "paracetamol 500 mg tablet, 24",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2014-06-30",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "subsidy": Array [],
        "type": "UPG",
      },
      Object {
        "coding": Array [
          Object {
            "code": "46259011000036105",
            "display": "paracetamol 500 mg tablet, 20",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2014-06-30",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "subsidy": Array [],
        "type": "UPG",
      },
    ],
    "query": "type:MPP package:\\"23628011000036109|paracetamol 500 mg tablet\\"",
    "total": 25,
    "type": "group",
  },
]
`;

exports[`FhirMedication should pass nodes and links through for UPDSF 2`] = `
Array [
  Object {
    "source": "23628011000036109",
    "target": "21433011000036107",
    "type": "is-a",
  },
  Object {
    "source": "23628011000036109",
    "target": "2442011000036104",
    "type": "has-boss",
  },
  Object {
    "source": "group-af136f0607369d4c0fba98771e8b05d13237fe381319b59e6a375520615a09a8",
    "sourceIsGroup": true,
    "target": "23628011000036109",
    "type": "is-a",
  },
  Object {
    "source": "group-bd1d58572d7bfde3ec89b383060ae08f73a116d33ab055ebb4eeef82b6e5c2c9",
    "sourceIsGroup": true,
    "target": "23628011000036109",
    "type": "is-a",
  },
  Object {
    "source": "group-24a723931526a57542783b62c236f912708822e33391a8f48c7de44db669e015",
    "sourceIsGroup": true,
    "target": "23628011000036109",
    "type": "has-updsf",
  },
]
`;

exports[`FhirMedication should pass nodes and links through for substance 1`] = `
Array [
  Object {
    "coding": Array [
      Object {
        "code": "2292011000036106",
        "display": "loratadine",
        "system": "http://snomed.info/sct",
      },
    ],
    "focused": true,
    "lastModified": "2014-06-30",
    "status": "active",
    "subsidy": Array [],
    "type": "substance",
  },
  Object {
    "coding": Array [
      Object {
        "code": "21701011000036106",
        "display": "loratadine",
        "system": "http://snomed.info/sct",
      },
    ],
    "lastModified": "2014-06-30",
    "sourceCodeSystemUri": "http://snomed.info/sct",
    "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
    "status": "active",
    "subsidy": Array [],
    "type": "UPD",
  },
  Object {
    "coding": Array [
      Object {
        "code": "44955011000036104",
        "display": "loratadine + pseudoephedrine",
        "system": "http://snomed.info/sct",
      },
    ],
    "lastModified": "2014-06-30",
    "sourceCodeSystemUri": "http://snomed.info/sct",
    "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
    "status": "active",
    "subsidy": Array [],
    "type": "UPD",
  },
  Object {
    "coding": Array [
      Object {
        "code": "b3602d2118e67817b7d7dafa97087afa7fb762392942df56eb95d6fe0a991235",
        "system": "group",
      },
    ],
    "concepts": Array [
      Object {
        "coding": Array [
          Object {
            "code": "45158011000036102",
            "display": "loratadine 5 mg + pseudoephedrine sulfate 120 mg modified release tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2016-05-31",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "subsidy": Array [],
        "type": "UPDSF",
      },
      Object {
        "coding": Array [
          Object {
            "code": "22427011000036102",
            "display": "loratadine 10 mg tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2014-06-30",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "subsidy": Array [],
        "type": "UPDSF",
      },
      Object {
        "coding": Array [
          Object {
            "code": "86001000036103",
            "display": "loratadine 10 mg effervescent tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2016-06-30",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "subsidy": Array [],
        "type": "UPDSF",
      },
    ],
    "query": "type:MPUU ingredient:2292011000036106|loratadine",
    "total": 7,
    "type": "group",
  },
  Object {
    "coding": Array [
      Object {
        "code": "c5ef4be6b5905c8c5c2c96bf73f687d66865905d93d328abec40a993b31e37d3",
        "system": "group",
      },
    ],
    "concepts": Array [
      Object {
        "coding": Array [
          Object {
            "code": "924539011000036107",
            "display": "Claratyne-D with Decongestant Repetab modified release tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2016-05-31",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "subsidy": Array [],
        "type": "BPSF",
      },
      Object {
        "coding": Array [
          Object {
            "code": "54112011000036105",
            "display": "Claratyne 10 mg effervescent tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2016-06-30",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "subsidy": Array [],
        "type": "BPSF",
      },
      Object {
        "coding": Array [
          Object {
            "code": "649061000168101",
            "display": "Lorastyne (Pharmacy Action) 10 mg uncoated tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2016-08-31",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "subsidy": Array [],
        "type": "BPSF",
      },
    ],
    "query": "type:TPUU ingredient:2292011000036106|loratadine",
    "total": 27,
    "type": "group",
  },
]
`;

exports[`FhirMedication should pass nodes and links through for substance 2`] = `
Array [
  Object {
    "source": "21701011000036106",
    "target": "2292011000036106",
    "type": "has-ingredient",
  },
  Object {
    "source": "44955011000036104",
    "target": "2292011000036106",
    "type": "has-ingredient",
  },
  Object {
    "source": "group-b3602d2118e67817b7d7dafa97087afa7fb762392942df56eb95d6fe0a991235",
    "sourceIsGroup": true,
    "target": "2292011000036106",
    "type": "has-boss",
  },
  Object {
    "source": "group-c5ef4be6b5905c8c5c2c96bf73f687d66865905d93d328abec40a993b31e37d3",
    "sourceIsGroup": true,
    "target": "2292011000036106",
    "type": "has-boss",
  },
]
`;

exports[`FhirMedication should update child bundles 1`] = `
Array [
  Object {
    "coding": Array [
      Object {
        "code": "21433011000036107",
        "display": "paracetamol",
        "system": "http://snomed.info/sct",
      },
    ],
    "status": "active",
    "type": "UPD",
  },
  Object {
    "coding": Array [
      Object {
        "code": "2442011000036104",
        "display": "paracetamol",
        "system": "http://snomed.info/sct",
      },
    ],
    "type": "substance",
  },
  Object {
    "coding": Array [
      Object {
        "code": "23628011000036109",
        "display": "paracetamol 500 mg tablet",
        "system": "http://snomed.info/sct",
      },
    ],
    "focused": true,
    "lastModified": "2014-06-30",
    "sourceCodeSystemUri": "http://snomed.info/sct",
    "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
    "status": "active",
    "subsidy": Array [],
    "type": "UPDSF",
  },
  Object {
    "coding": Array [
      Object {
        "code": "af136f0607369d4c0fba98771e8b05d13237fe381319b59e6a375520615a09a8",
        "system": "group",
      },
    ],
    "concepts": Array [
      Object {
        "coding": Array [
          Object {
            "code": "52258011000036105",
            "display": "paracetamol 500 mg + codeine phosphate hemihydrate 10 mg tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2014-06-30",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "subsidy": Array [],
        "type": "UPDSF",
      },
      Object {
        "coding": Array [
          Object {
            "code": "52806011000036108",
            "display": "paracetamol 500 mg + codeine phosphate hemihydrate 10 mg + doxylamine succinate 5.1 mg tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2016-02-29",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "subsidy": Array [],
        "type": "UPDSF",
      },
      Object {
        "coding": Array [
          Object {
            "code": "52803011000036102",
            "display": "paracetamol 500 mg + codeine phosphate hemihydrate 15 mg tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2014-06-30",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "subsidy": Array [],
        "type": "UPDSF",
      },
    ],
    "query": "type:MPUU ancestor:\\"23628011000036109|paracetamol 500 mg tablet\\"",
    "total": 28,
    "type": "group",
  },
  Object {
    "coding": Array [
      Object {
        "code": "bd1d58572d7bfde3ec89b383060ae08f73a116d33ab055ebb4eeef82b6e5c2c9",
        "system": "group",
      },
    ],
    "concepts": Array [
      Object {
        "coding": Array [
          Object {
            "code": "54282011000036105",
            "display": "Paracetamol (Herron) 500 mg uncoated tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2016-08-31",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "subsidy": Array [],
        "type": "BPSF",
      },
      Object {
        "coding": Array [
          Object {
            "code": "88341000036103",
            "display": "Calmative Pain Relief (Pharmacy Action) uncoated tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2016-08-31",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "subsidy": Array [],
        "type": "BPSF",
      },
      Object {
        "coding": Array [
          Object {
            "code": "1062931000168103",
            "display": "Pain Relief Paracetamol plus Codeine with Calmative (Cipla) uncoated tablet",
            "system": "http://snomed.info/sct",
          },
        ],
        "lastModified": "2018-01-31",
        "sourceCodeSystemUri": "http://snomed.info/sct",
        "sourceCodeSystemVersion": "http://snomed.info/sct?version=http%3A%2F%2Fsnomed.info%2Fsct%2F32506021000036107%2Fversion%2F20180228",
        "status": "active",
        "subsidy": Array [],
        "type": "BPSF",
      },
    ],
    "query": "type:TPUU ancestor:\\"23628011000036109|paracetamol 500 mg tablet\\"",
    "total": 406,
    "type": "group",
  },
]
`;

exports[`FhirMedication should update the primary resource 1`] = `
Array [
  Object {
    "coding": Array [
      Object {
        "code": "2292011000036106",
        "display": "loratadine",
        "system": "http://snomed.info/sct",
      },
    ],
    "focused": true,
    "lastModified": "2014-06-30",
    "status": "active",
    "subsidy": Array [],
    "type": "substance",
  },
]
`;
